tests/miniJava/neg/000124_mutation.MiniJava
class java { public 0 static void Main ( String [ ] java ) { { } } }
